--- a/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
+++ b/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
@@ -177,15 +177,20 @@
 								</Grid.ColumnDefinitions>
 								<Grid.RowDefinitions>
 									<RowDefinition Height="Auto" />
-									<RowDefinition Height="Auto" />
-								</Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                </Grid.RowDefinitions>
 
 								<CheckBox      Grid.Row="0" Grid.Column="0" Margin="2" Content="Hide tag search button"  IsChecked="{Binding Settings.HideTagChooser}" />
 
 								<CheckBox      Grid.Row="0" Grid.Column="3" Margin="2" Content="Auto hide menubar"  IsChecked="{Binding Settings.AutoHideMainMenu}" />
 								<ctrl:PHelpBtn Grid.Row="0" Grid.Column="4" HelpProperty="AutoHideMainMenu" Margin="2,0" VerticalAlignment="Center" />
 
-								<CheckBox      Grid.Row="1" Grid.Column="0" Margin="2" Content="Use vertical layout"  IsChecked="{Binding Settings.VerticalMainLayout}" />
+                                <CheckBox      Grid.Row="1" Grid.Column="0" Margin="2" Content="Hide 'Create Note' button"  IsChecked="{Binding Settings.HideAddNoteButton}" />
+
+                                <CheckBox      Grid.Row="2" Grid.Column="0" Margin="2" Content="Hide search box"  IsChecked="{Binding Settings.HideSearchBox}" />
+
+                                <CheckBox      Grid.Row="1" Grid.Column="3" Margin="2" Content="Use vertical layout"  IsChecked="{Binding Settings.VerticalMainLayout}" />
 
 							</Grid>
 						</GroupBox>
@@ -233,9 +238,10 @@
 									<RowDefinition Height="Auto" />
 								</Grid.RowDefinitions>
 
-								<CheckBox      Grid.Row="0" Grid.Column="0" Margin="2" Content="Minimize to tray" IsChecked="{Binding Settings.MinimizeToTray}" />
+                                <CheckBox      Grid.Row="0" Grid.Column="0" Margin="2" Content="Minimize to tray" IsChecked="{Binding Settings.MinimizeToTray}" />
+                                <ctrl:PHelpBtn Grid.Row="0" Grid.Column="1" HelpProperty="Minimize" Margin="2,0" VerticalAlignment="Center" />
 
-								<CheckBox      Grid.Row="1" Grid.Column="0" Margin="2" Content="Close to tray" IsChecked="{Binding Settings.CloseToTray}" />
+                                <CheckBox      Grid.Row="1" Grid.Column="0" Margin="2" Content="Close to tray" IsChecked="{Binding Settings.CloseToTray}" />
 								<ctrl:PHelpBtn Grid.Row="1" Grid.Column="1" HelpProperty="CloseToTray" Margin="2,0" VerticalAlignment="Center" />
 
 								<CheckBox      Grid.Row="0" Grid.Column="3" Margin="2" Content="Always on top" IsChecked="{Binding Settings.AlwaysOnTop}" />
